--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,6 @@ html {
  width: 100%;
  height: 100%;
  overflow-x: hidden;
- overflow-y: hidden;
- 
 }
 
 body {
@@ -15,7 +13,10 @@ body {
 
 
 
-/*------------------------------HEADER*/
+.image-size {
+ height: 40px;
+}
+
 
 .masthead {
  min-height: 30rem;
@@ -34,38 +35,19 @@ body {
 
 }
 
-h1 {
+h1  {
  font-weight: bolder;
  color: #dece0e;
  text-shadow: #000 0px 0px 1px, #000 0px 0px 1px, #000 0px 0px 1px,
  #000 0px 0px 1px, #000 0px 0px 1px, #000 0px 0px 1px;
+ font-size: 3rem;
+
 }
 
 h3 {
  color: #fff;
  text-shadow: #000 0px 0px 1px,   #000 0px 0px 1px,   #000 0px 0px 1px,
  #000 0px 0px 1px,   #000 0px 0px 1px,   #000 0px 0px 1px;
+  
 }
 
-.justify-content-center{
- background-color: blue;
-
-}
-.nav-link {
- color: #fff;
-}
-
-
-
-
-
-
-/*------------------------------HEADER*/
-
-/*------------------------------HEADER*/
-
-/*------------------------------HEADER*/
-
-/*------------------------------HEADER*/
-
-/*------------------------------HEADER*/
