--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,80 @@ h3 {
  color: #fff;
  text-shadow: #000 0px 0px 1px,   #000 0px 0px 1px,   #000 0px 0px 1px,
  #000 0px 0px 1px,   #000 0px 0px 1px,   #000 0px 0px 1px;
+}
+
+.footer-basic {
+  padding:0px 0;
+  background-color:#f8f9fa;
+  color:#4b4c4d;
+}
+
+.footer-basic ul {
+  padding-left: 50px;
+  padding-right: 50px;
+  list-style:none;
+  text-align:center;
+  font-size:18px;
+  line-height:1.6;
+  margin-bottom:0;
+}
+
+.footer-basic li {
+  padding:0 10px;
+}
+
+.footer-basic ul a {
+  color:inherit;
+  text-decoration:none;
+  opacity:0.8;
+}
+
+.footer-basic ul a:hover {
+  opacity:1;
+}
+
+.footer-basic .social {
+  text-align:center;
+  padding-bottom:25px;
+  padding-top: 25px;
+}
+
+.footer-basic .social > a {
+  font-size:24px;
+  width:40px;
+  height:40px;
+  line-height:40px;
+  display:inline-block;
+  text-align:center;
+  border-radius:50%;
+  border:1px solid #ccc;
+  margin:0 8px;
+  color:inherit;
+  opacity:0.75;
   
 }
+
+.footer-basic .social > a:hover {
+  opacity:0.9;
+}
+
+.footer-basic .copyright {
+  margin-top:15px;
+  text-align:center;
+  font-size:13px;
+  color:#aaa;
+  margin-bottom:0;
+  padding-bottom: 15px;
+}
+
+.footer-basic h2 {
+    font-size: 25px;
+    font-style: italic;
+    margin-left: 50px;
+    margin-right: 50px;
+    text-align: center;
+}
+
+
+
 
