--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,117 +1,167 @@
 @import url('https://fonts.googleapis.com/css?family=Sniglet&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Courgette&display=swap');
+@import url('https://fonts.googleapis.com/css?family=DM+Serif+Display&display=swap');
 body,
 html {
- width: 100%;
- height: 100%;
- overflow-x: hidden;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
 }
 
 body {
- font-family: 'Source Sans Pro';
+    font-family: 'Source Sans Pro';
+
 }
 
 
 
 .image-size {
- height: 40px;
+    height: 40px;
 }
 
 
 .masthead {
- min-height: 30rem;
- position: relative;
- display: table;
- width: 100%;
- height: 100%;
- padding-top: 0rem;
- padding-bottom: 0rem;
- background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0.1)), to(rgba(255, 255, 255, 0.1))), url("../images/viewofstrangnas.jpg");
- background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("../images/viewofstrangnas.jpg");
- background-image: url(../images/viewofstrangnas.jpg);
- background-position: center center;
- background-repeat: no-repeat;
- background-size: cover;
+    min-height: 30rem;
+    position: relative;
+    display: table;
+    width: 100%;
+    height: 100%;
+    padding-top: 0rem;
+    padding-bottom: 0rem;
+    background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0.1)), to(rgba(255, 255, 255, 0.1))), url("../images/viewofstrangnas.jpg");
+    background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("../images/viewofstrangnas.jpg");
+    background-image: url(../images/viewofstrangnas.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
 
 }
 
-h1  {
- font-weight: bolder;
- color: #dece0e;
- text-shadow: #000 0px 0px 1px, #000 0px 0px 1px, #000 0px 0px 1px,
- #000 0px 0px 1px, #000 0px 0px 1px, #000 0px 0px 1px;
- font-size: 3rem;
+h1 {
+    font-weight: bolder;
+    color: #dece0e;
+    text-shadow: #000 0px 0px 1px, #000 0px 0px 1px, #000 0px 0px 1px,
+    #000 0px 0px 1px, #000 0px 0px 1px, #000 0px 0px 1px;
+    font-size: 3rem;
 
 }
 
 h3 {
- color: #fff;
- text-shadow: #000 0px 0px 1px,   #000 0px 0px 1px,   #000 0px 0px 1px,
- #000 0px 0px 1px,   #000 0px 0px 1px,   #000 0px 0px 1px;
+    color: #fff;
+    text-shadow: #000 0px 0px 1px, #000 0px 0px 1px, #000 0px 0px 1px,
+    #000 0px 0px 1px, #000 0px 0px 1px, #000 0px 0px 1px;
 }
 
+
+
+/*-------------------------------------places-------------------------*/
+
+.to-do {
+    color: #fff;
+    background-color: #7FF4D7;
+    text-align: center;
+    margin-top: 50px;
+
+}
+
+.to-do-sub-head1 {
+    font-family: 'DM Serif Display', serif;
+    padding-left: 10px;
+    padding-top: 20px;
+}
+
+
+
+
+
+#container {
+    padding: 10px;
+    margin-left: 0px;
+    margin-right: 0px;
+    display: inline-block;
+    text-align: center;
+    background-color: #EEFEFA;
+}
+
+.img.fluid {
+    max-width: 100%;
+    height: auto;
+}
+
+.col-6 {
+    padding: 10px;
+    text-align: center;
+
+}
+
+hr {
+    width: 50%;
+}
+
+/*-----------------------------------------footer--*/
+
 .footer-basic {
-  padding:0px 0;
-  background-color:#f8f9fa;
-  color:#4b4c4d;
+    padding: 0px 0;
+    background-color: #f8f9fa;
+    color: #4b4c4d;
 }
 
 .footer-basic ul {
-  padding-left: 50px;
-  padding-right: 50px;
-  list-style:none;
-  text-align:center;
-  font-size:18px;
-  line-height:1.6;
-  margin-bottom:0;
+    padding-left: 50px;
+    padding-right: 50px;
+    list-style: none;
+    text-align: center;
+    font-size: 18px;
+    line-height: 1.6;
+    margin-bottom: 0;
 }
 
 .footer-basic li {
-  padding:0 10px;
+    padding: 0 10px;
 }
 
 .footer-basic ul a {
-  color:inherit;
-  text-decoration:none;
-  opacity:0.8;
+    color: inherit;
+    text-decoration: none;
+    opacity: 0.8;
 }
 
 .footer-basic ul a:hover {
-  opacity:1;
+    opacity: 1;
 }
 
 .footer-basic .social {
-  text-align:center;
-  padding-bottom:25px;
-  padding-top: 25px;
+    text-align: center;
+    padding-bottom: 25px;
+    padding-top: 25px;
 }
 
-.footer-basic .social > a {
-  font-size:24px;
-  width:40px;
-  height:40px;
-  line-height:40px;
-  display:inline-block;
-  text-align:center;
-  border-radius:50%;
-  border:1px solid #ccc;
-  margin:0 8px;
-  color:inherit;
-  opacity:0.75;
-  
+.footer-basic .social>a {
+    font-size: 24px;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    display: inline-block;
+    text-align: center;
+    border-radius: 50%;
+    border: 1px solid #ccc;
+    margin: 0 8px;
+    color: inherit;
+    opacity: 0.75;
+
 }
 
-.footer-basic .social > a:hover {
-  opacity:0.9;
+.footer-basic .social>a:hover {
+    opacity: 0.9;
 }
 
 .footer-basic .copyright {
-  margin-top:15px;
-  text-align:center;
-  font-size:13px;
-  color:#aaa;
-  margin-bottom:0;
-  padding-bottom: 15px;
+    margin-top: 15px;
+    text-align: center;
+    font-size: 13px;
+    color: #aaa;
+    margin-bottom: 0;
+    padding-bottom: 15px;
 }
 
 .footer-basic h2 {
@@ -121,7 +171,6 @@ h3 {
     margin-right: 50px;
     text-align: center;
 }
-
 
 
 
