--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,9 +149,18 @@ hr {
     
 }
 .col-sm-12 .col-md-6  {
-    padding-right:20px;
+    
     margin: 5px;
+    padding: 20px 15px 0;
 }
+
+.col-sm-6 {
+     
+    padding-top: 20px;
+    padding-right: 15px;
+    text-align: center;
+}
+
 
 .embed-responsive-item {
     padding: 20px 15px 0;
