added webkit for videos

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,7 +149,7 @@ hr {
     
 }
 .col-sm-12 .col-md-6  {
-    
+    -webkit-overflow-scrolling:touch; overflow:auto;
     margin: 5px;
     padding: 20px 15px 0;
 }
