added overflow to see if it solves iphone problem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,6 +152,7 @@ hr {
     -webkit-overflow-scrolling:touch; overflow:auto;
     margin: 5px;
     padding: 20px 15px 0;
+    overflow-y: visible;
 }
 
 .col-sm-6 {
