--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@ html {
     width: 100%;
     height: 100%;
     overflow-x: hidden;
+   
 }
 
 body {
@@ -56,7 +57,7 @@ h3 {
     #000 0px 0px 1px, #000 0px 0px 1px, #000 0px 0px 1px;
 }
 
-#container {
+#container -webkit-overflow-scroll:{
     padding: 10px;
     margin-left: 0px;
     margin-right: 0px;
@@ -64,6 +65,7 @@ h3 {
     text-align: center;
     background-color: #f8f9fa;
     width: 100%;
+    
 }
 p {
     font-weight: bold;
@@ -148,14 +150,12 @@ hr {
     margin-top: 50px;
     }
 
-.youtube-player {
+.embed-responsive-16by9{
     -webkit-overflow-scrolling: touch;
 }
         
     
 .col-sm-12 .col-md-6 {
-    overflow-y: scroll; 
-
     margin: 5px;
     padding: 20px 15px 0;
    
