changed css again

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,14 +150,23 @@ hr {
     margin-top: 50px;
     }
 
-.scroll-wrapper {
-	-webkit-overflow-scrolling: touch;
-  	overflow-y: scroll;
-  
+    .video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 35px;
+    height: 0;
+    overflow: hidden;
 }
-        
-            
-        
+
+.video-container iframe {
+ position: absolute;
+ top:0;
+ left: 0;
+ width: 100%;
+ height: 100%;
+}
+
+
 .col-sm-12 .col-md-6 {
     margin: 5px;
     padding: 20px 15px 0;
