--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,12 +6,14 @@ html {
     width: 100%;
     height: 100%;
     overflow-x: hidden;
+    background-color:#f8f9fa;
    
 }
 
 body {
     font-family: 'Source Sans Pro';
    }
+ 
  
  /*-------------------------------------navbar--------------------*/
  navbar {
@@ -145,6 +147,71 @@ hr {
 /*-------------------------------------images videos-------------------------*/
 
 
+/* Style the button and place it in the middle of the container/image */
+
+
+img .btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: #D5D0CD;
+  color: #f8f9fa;
+  font-size: 16px;
+  padding: 12px 24px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+/* Container needed to position the button. Adjust the width as needed */
+.container {
+  position: relative;
+  width: 100%;
+   background-color: #f8f9fa;
+   text-align: center;
+}
+div .container {
+   padding-right: 0px;
+    padding-left: 0px;
+    margin: 0px;
+    text-decoration: none;
+     background-color: #f8f9fa;
+}
+
+/* Make the image responsive */
+.container img {
+  width: 90%;
+  height: auto;
+  background-color: #f8f9fa;
+  
+}
+
+/* Style the button and place it in the middle of the container/image */
+.container .btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: #F9F3F0;
+  color: white;
+  font-size: 16px;
+  padding: 12px 24px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: ease-in-out;
+  transition-duration: 0.5s;
+  font-weight: 500;
+}
+
+.container .btn:hover {
+  background-color: #D5D0CD;
+ 
+  
+}
 .imagesvideos {
     color: #f8f9fa;
     background-color: #56b3fc;
