--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -176,6 +176,7 @@ div .container {
     margin: 0px;
     text-decoration: none;
      background-color: #f8f9fa;
+     width: 100%;
 }
 
 /* Make the image responsive */
@@ -220,8 +221,9 @@ div .container {
 .col-sm-12 .col-md-6 {
     margin: 5px;
     padding: 20px 15px 0;
-   
 }
+
+
 
 .col-sm-6 {
      
@@ -330,7 +332,4 @@ position:absolute;
 btn {
     margin-top: 0;
 }
-
-
-
 
